@@ -32,7 +32,7 @@ $versions['AUTHORS']='11306';
 $versions['ChangeLog']='';
 $versions['LICENSE.txt']='11584';
 $versions['README']='3848';
-$versions['Version.php']='18013';
+$versions['Version.php']='18419';
 $versions['add_comment.php']='17806';
 $versions['add_photos.php']='18002';
 $versions['add_photos_frame.php']='17808';
@@ -40,10 +40,10 @@ $versions['add_photos_refresh.php']='17808';
 $versions['admin-page.php']='17869';
 $versions['administer_startpage.php']='17812';
 $versions['album_permissions.php']='17902';
-$versions['albums.php']='18010';
+$versions['albums.php']='18062';
 $versions['block-random.php']='17827';
 $versions['captionator.php']='17806';
-$versions['classes/Album.php']='18010';
+$versions['classes/Album.php']='18188';
 $versions['classes/AlbumDB.php']='17811';
 $versions['classes/AlbumItem.php']='17959';
 $versions['classes/Colors.php']='17840';
@@ -118,7 +118,7 @@ $versions['contrib/phpnuke/modules.php.MOD']='17671';
 $versions['contrib/postnuke/readme.72x']='15408';
 $versions['contrib/postnuke/readme.750']='17205';
 $versions['copy_photo.php']='17854';
-$versions['create_user.php']='17812';
+$versions['create_user.php']='18053';
 $versions['css/base.css.default']='17902';
 $versions['css/config.css.default']='17836';
 $versions['css/embedded_style.css.default']='17671';
@@ -126,7 +126,7 @@ $versions['css/mooRainbow.css']='16779';
 $versions['css/screen.css.default']='17797';
 $versions['delete_album.php']='17806';
 $versions['delete_photo.php']='17806';
-$versions['delete_user.php']='17812';
+$versions['delete_user.php']='18053';
 $versions['do_command.php']='17797';
 $versions['download.php']='17800';
 $versions['ecard_form.php']='17835';
@@ -315,7 +315,7 @@ $versions['html_wrap/popup.footer.default']='17810';
 $versions['html_wrap/slideshow.footer.default']='17851';
 $versions['html_wrap/slideshow.header.default']='17851';
 $versions['html_wrap/stats.header.default']='17899';
-$versions['html_wrap/wrapper.footer.default']='17853';
+$versions['html_wrap/wrapper.footer.default']='18384';
 $versions['html_wrap/wrapper.header.default']='17853';
 $versions['imagemap.php']='17959';
 $versions['images/BB1.gif']='';
@@ -384,17 +384,16 @@ $versions['images/gallery-tag.png']='';
 $versions['images/gallery1.gif']='';
 $versions['images/green_trafficlight.gif']='';
 $versions['images/icons/2downarrow.gif']='';
-$versions['images/icons/admin.gif']='';
-$versions['images/icons/behavior-capplet.gif']='';
 $versions['images/icons/camera.gif']='';
+$versions['images/icons/cog.png']='';
+$versions['images/icons/comments.png']='';
 $versions['images/icons/compressed.gif']='';
 $versions['images/icons/decrypted.gif']='';
 $versions['images/icons/delete.gif']='';
-$versions['images/icons/display.gif']='';
 $versions['images/icons/ecard.gif']='';
 $versions['images/icons/editcopy.gif']='';
 $versions['images/icons/exit.gif']='';
-$versions['images/icons/folder_new.gif']='';
+$versions['images/icons/folder_new.png']='';
 $versions['images/icons/frame_query.gif']='';
 $versions['images/icons/help.gif']='';
 $versions['images/icons/history.gif']='';
@@ -412,6 +411,8 @@ $versions['images/icons/key.gif']='';
 $versions['images/icons/locked.gif']='';
 $versions['images/icons/login.gif']='';
 $versions['images/icons/logout.gif']='';
+$versions['images/icons/map.png']='';
+$versions['images/icons/monitor.png']='';
 $versions['images/icons/navigation/nav_dot.gif']='';
 $versions['images/icons/navigation/nav_dot_left.gif']='';
 $versions['images/icons/navigation/nav_dot_right.gif']='';
@@ -422,12 +423,12 @@ $versions['images/icons/navigation/nav_next.gif']='';
 $versions['images/icons/navigation/nav_page.gif']='';
 $versions['images/icons/navigation/nav_prev.gif']='';
 $versions['images/icons/navigation/return_to.gif']='';
-$versions['images/icons/new_album.gif']='';
 $versions['images/icons/no_idea.gif']='';
 $versions['images/icons/notice/error.gif']='';
 $versions['images/icons/notice/information.gif']='';
 $versions['images/icons/notice/success.gif']='';
 $versions['images/icons/notice/warning.gif']='';
+$versions['images/icons/picture_edit.png']='';
 $versions['images/icons/preferences.gif']='';
 $versions['images/icons/register.gif']='';
 $versions['images/icons/reload.gif']='';
@@ -436,14 +437,12 @@ $versions['images/icons/slideshow/1leftarrow.gif']='';
 $versions['images/icons/slideshow/1rightarrow.gif']='';
 $versions['images/icons/slideshow/play_stop.gif']='';
 $versions['images/icons/tab_duplicate.gif']='';
-$versions['images/icons/thumbnail.gif']='';
+$versions['images/icons/text_list_numbers.png']='';
 $versions['images/icons/tree/join-left.gif']='';
 $versions['images/icons/tree/join-right.gif']='';
 $versions['images/icons/tree/joinbottom-left.gif']='';
 $versions['images/icons/tree/joinbottom-right.gif']='';
-$versions['images/icons/unsortedList.gif']='';
 $versions['images/icons/user_gray.gif']='';
-$versions['images/icons/view_comment.gif']='';
 $versions['images/icons/viewmag1.gif']='';
 $versions['images/icons/window_fullscreen.gif']='';
 $versions['images/icons/window_nofullscreen.gif']='';
@@ -487,7 +486,7 @@ $versions['includes/slideshow/applet.cfg']='17808';
 $versions['includes/slideshow/applet.inc']='17827';
 $versions['includes/slideshow/high.inc']='17827';
 $versions['includes/slideshow/low.inc']='17827';
-$versions['includes/stats/stats.inc.php']='17898';
+$versions['includes/stats/stats.inc.php']='18053';
 $versions['index.php']='17853';
 $versions['init.php']='17853';
 $versions['java/GalleryRemoteApplet.jar']='';
@@ -538,8 +537,8 @@ $versions['layout/navtableend.inc']='6352';
 $versions['layout/navtablemiddle.inc']='6352';
 $versions['layout/searchdraw.inc']='17848';
 $versions['layout/watermarkform.inc']='17819';
-$versions['lib/album.php']='17982';
-$versions['lib/albumItem.php']='18002';
+$versions['lib/album.php']='18041';
+$versions['lib/albumItem.php']='18062';
 $versions['lib/content.php']='18010';
 $versions['lib/filesystem.php']='17882';
 $versions['lib/filetypes.php']='16662';
@@ -550,25 +549,25 @@ $versions['lib/mail.php']='17900';
 $versions['lib/messages.php']='17900';
 $versions['lib/popup.php']='17900';
 $versions['lib/progressbar.php']='17321';
-$versions['lib/setup.php']='17982';
+$versions['lib/setup.php']='18419';
 $versions['lib/stats.php']='15842';
 $versions['lib/text.php']='16777';
 $versions['lib/url.php']='17853';
 $versions['lib/users.php']='17321';
-$versions['lib/valchecks.php']='17900';
+$versions['lib/valchecks.php']='18384';
 $versions['lib/voting.php']='17945';
 $versions['login.php']='17837';
 $versions['manage_users.php']='17822';
-$versions['manifest.inc']='18027';
-$versions['modify_user.php']='17811';
+$versions['manifest.inc']='17801';
+$versions['modify_user.php']='18053';
 $versions['move_album.php']='17806';
 $versions['move_photo.php']='17963';
 $versions['multi_create_user.php']='17808';
 $versions['new_password.php']='17898';
 $versions['nls.php']='17808';
 $versions['photo_owner.php']='17806';
-$versions['platform/fs_unix.php']='17823';
-$versions['platform/fs_win32.php']='17985';
+$versions['platform/fs_unix.php']='18053';
+$versions['platform/fs_win32.php']='18053';
 $versions['poll_properties.php']='17812';
 $versions['poll_results.php']='17840';
 $versions['progress_uploading.php']='17808';
@@ -582,17 +581,17 @@ $versions['rename_album.php']='17822';
 $versions['reset_votes.php']='17806';
 $versions['resize_photo.php']='17806';
 $versions['rotate_photo.php']='17806';
-$versions['rss.php']='17825';
+$versions['rss.php']='18063';
 $versions['save_photos.php']='17796';
 $versions['search.php']='17812';
 $versions['secure.sh']='6294';
 $versions['session.php']='18002';
-$versions['setup/check.inc']='17801';
+$versions['setup/check.inc']='18419';
 $versions['setup/check_imagemagick.php']='17801';
 $versions['setup/check_mail.php']='17801';
 $versions['setup/check_netpbm.php']='17801';
 $versions['setup/check_versions.php']='17801';
-$versions['setup/config_data.inc']='17801';
+$versions['setup/config_data.inc']='18419';
 $versions['setup/confirm.inc']='17801';
 $versions['setup/constants.inc']='17848';
 $versions['setup/defaults.inc']='17801';
@@ -811,12 +810,12 @@ $versions['slideshow.php']='18002';
 $versions['sort_album.php']='17806';
 $versions['stamp_preview.php']='17808';
 $versions['stats-wizard.php']='17899';
-$versions['stats.php']='17899';
+$versions['stats.php']='18419';
 $versions['upgrade_album.php']='17816';
 $versions['upgrade_users.php']='17808';
 $versions['user_preferences.php']='17807';
 $versions['util.php']='17985';
-$versions['view_album.php']='17941';
+$versions['view_album.php']='18062';
 $versions['view_comments.php']='17933';
 $versions['view_photo.php']='17958';
 $versions['view_photo_properties.php']='17806';
